# lab6

./: CMakeLists.txt  Document.h  DocumentController.h  Primitive.h  main.cpp
.github/workflows/: release.yml
